Fixing the script name from "tests" to "test"

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,6 @@ jobs:
          npm install
     - name: Executing tests
       run:
-         npm run tests
+         npm run test
       env:
         CI: true
